--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "knex": "^0.95.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
