--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js ",
-    "dev": "node index.js ",
+    "start": "node index.js ",
+    "dev": "nodemon index.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marcelo Figueiredo Terenciani",
