--- a/package.json
+++ b/package.json
@@ -19,18 +19,20 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "generate-password": "^1.6.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.1",
+    "md5": "^2.3.0",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0"
   },
   "devDependencies": {
-    "eslint": "^7.21.0",
+    "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1"
   }
 }
