--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "generate-password": "^1.6.0",
+    "jsonfile": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.1",
     "md5": "^2.3.0",
