--- a/site-settings.json
+++ b/site-settings.json
@@ -2,7 +2,7 @@
   "hero": {
     "title": "Hectare Maps",
     "subtitle": "Plataforma de processamento de imagens com drones",
-    "background": "1616281346816.jpg"
+    "background": "1616281747075.jpeg"
   },
   "about": {
     "title": "Quem somos",
