--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "md5": "^2.3.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "nodemailer": "^6.5.0"
+    "nodemailer": "^6.5.0",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
