--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "swagger-jsdoc": "6.0.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
