--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-zip": "^3.0.0",
     "generate-password": "^1.6.0",
     "jsonfile": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
