--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-zip": "^3.0.0",
     "generate-password": "^1.6.0",
+    "http-status-codes": "^2.1.4",
     "into-stream": "^7.0.0",
     "jsonfile": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
