--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "@azure/storage-blob": "^12.5.0",
     "azure-storage": "^2.10.3",
-    "body-parser": "^1.19.0",
     "busboy": "^0.3.1",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
@@ -34,9 +33,7 @@
     "multer-azure-blob-storage": "^1.0.2",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
-    "rimraf": "^3.0.2",
-    "swagger-jsdoc": "6.0.0",
-    "swagger-ui-express": "^4.1.6"
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
