--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Marcelo Figueiredo Terenciani",
   "license": "ISC",
   "dependencies": {
+    "@azure/storage-blob": "^12.5.0",
     "azure-storage": "^2.10.3",
     "busboy": "^0.3.1",
     "chalk": "^4.1.0",
